force-app/main/default/objects/Course__c/Course__c.object-meta.xml
<CustomObject>
    <label>Course</label>
    <nameField>
        <label>Course ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>