force-app/main/default/objects/Course__c/fields/AmountINR__c.field-meta.xml
<CustomField>
    <fullName>AmountINR__c</fullName>
    <label>Amount (in INR)</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>