force-app/main/default/objects/Course__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Admin</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Integration</fullName>
            </value>
            <value>
                <fullName>Lightning Web Component</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>