force-app/main/default/objects/Course__c/fields/CertificationCosts__c.field-meta.xml
<CustomField>
    <fullName>CertificationCosts__c</fullName>
    <label>Certification Costs</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>