force-app/main/default/objects/Course__c/fields/Course_Cost__c.field-meta.xml
<CustomField>
    <fullName>Course_Cost__c</fullName>
    <label>Course Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>