force-app/main/default/objects/Course__c/fields/CourseCode__c.field-meta.xml
<CustomField>
    <fullName>CourseCode__c</fullName>
    <label>Course Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>