force-app/main/default/objects/Course__c/fields/CourseDescription__c.field-meta.xml
<CustomField>
    <fullName>CourseDescription__c</fullName>
    <label>Course Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>