force-app/main/default/objects/Course__c/fields/CourseTitle__c.field-meta.xml
<CustomField>
    <fullName>CourseTitle__c</fullName>
    <label>Course Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>