force-app/main/default/objects/Course__c/fields/IncludedRightSection__c.field-meta.xml
<CustomField>
    <fullName>IncludedRightSection__c</fullName>
    <label>What is Included (Right Section)</label>
    <length>2768</length>
    <type>Html</type>
</CustomField>