force-app/main/default/objects/Course__c/fields/LearnRightSection__c.field-meta.xml
<CustomField>
    <fullName>LearnRightSection__c</fullName>
    <label>What you will learn (right section)</label>
    <length>2768</length>
    <type>Html</type>
</CustomField>