force-app/main/default/objects/Course__c/fields/Materials_Included__c.field-meta.xml
<CustomField>
    <fullName>Materials_Included__c</fullName>
    <label>Materials Included</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>