force-app/main/default/objects/Course__c/fields/TrainingManualCost__c.field-meta.xml
<CustomField>
    <fullName>TrainingManualCost__c</fullName>
    <label>Training Manual Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>