force-app/main/default/objects/Course__c/fields/What_you_will_learn__c.field-meta.xml
<CustomField>
    <fullName>What_you_will_learn__c</fullName>
    <label>What you will learn</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>