force-app/main/default/objects/Course__c/fields/WhoisthisCourseFor__c.field-meta.xml
<CustomField>
    <fullName>WhoisthisCourseFor__c</fullName>
    <label>Who is this Course For?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>