force-app/main/default/objects/Course__c/fields/Why_You_Should_Attend_the_Course__c.field-meta.xml
<CustomField>
    <fullName>Why_You_Should_Attend_the_Course__c</fullName>
    <label>Why You Should Attend the Course?</label>
    <length>2768</length>
    <type>Html</type>
</CustomField>