force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CourseCode__c</columns>
    <columns>Course_Cost__c</columns>
    <columns>Course_Duration__c</columns>
    <columns>Trainer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>